--- a/src/tpoFrontend/frontendTPO/src/index.css
+++ b/src/tpoFrontend/frontendTPO/src/index.css
@@ -15,11 +15,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #0e570b;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #0d5726;
 }
 
 body {
@@ -47,7 +47,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #1c3f1b;
 }
 button:focus,
 button:focus-visible {
@@ -56,13 +56,13 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
-    background-color: #ffffff;
+    color: #105224;
+    background-color: #153620;
   }
   a:hover {
-    color: #747bff;
+    color: #1c4d13;
   }
   button {
-    background-color: #f9f9f9;
+    background-color: #265a37;
   }
 }
