mejoro componente navbar lo hago responsive uso tailwind flowbite e iconos svg bootstrap

--- a/src/tpoFrontend/frontendTPO/src/tailwind.css
+++ b/src/tpoFrontend/frontendTPO/src/tailwind.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-    background: #4B5A3B;
+    background: #ffffff;
     font-size: larger;
     font-family: Verdana, Geneva, Tahoma, sans-serif
 }
