--- a/src/tpoFrontend/frontendTPO/src/App.css
+++ b/src/tpoFrontend/frontendTPO/src/App.css
@@ -1,3 +1,6 @@
+@import "flowbite/src/themes/default";
+@plugin "flowbite/plugin";
+@source "../node_modules/flowbite";
 #root {
   max-width: 1280px;
   margin: 0 auto;
