--- a/src/tpoFrontend/frontendTPO/src/tailwind.css
+++ b/src/tpoFrontend/frontendTPO/src/tailwind.css
@@ -5,5 +5,6 @@
 body {
     background: #ffffff;
     font-size: larger;
-    font-family: Verdana, Geneva, Tahoma, sans-serif
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    height: full 
 }
